fix for bug #31710 (return value for mysql_rollback is reverted) fixed also same behaviour for mysql_commit and mysql_autocommit